--- a/package.json
+++ b/package.json
@@ -1,6 +1,20 @@
 {
   "name": "echart",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "description": "- module目录自定义模块   - canvas通过canvas将echarts图标转换成图片   - file文件读写操作   - options生成echats图片参数的json配置文件，生成到config目录下 - http目录封装的请求 - config目录是echarts相关配置生成的json文件(目前支持一个，改成数组后支持批量设置) - app.js启动文件(node app.js)",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chenchao111/echart.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/chenchao111/echart/issues"
+  },
+  "homepage": "https://github.com/chenchao111/echart#readme"
 }
